Noop impls for lifecycle and xattrsupport